Version 1.7.15  December 6, 2016

  - Fixed print bugs.
  - Change specification of lis_print_rhistory().

Version 1.7.14  December 3, 2016

  - Fixed type related bugs for MPI.
  - Fixed bug in src/system/lis_error.c.
  - Updated src/system/lis_input.c.
  - Updated documents.

Version 1.7.13  November 22, 2016

  - Updated documents (thanks to Wei Liu).

Version 1.7.12  November 11, 2016

  - Fixed type related print bugs in lis_error.c.
  - Fixed bug in spmvtest3b.c.

Version 1.7.11  November 10, 2016

  - Fixed type related print bugs in test/spmvtest*.c.

Version 1.7.10  November 8, 2016

  - Fixed type related print bug in lis_esolver.c.

Version 1.7.9  November 7, 2016

  - Cleaned up print statements using lis_printf().
  - Fixed type related print bugs in error messages.

Version 1.7.8  November 4, 2016

  - Fixed installation bugs in win\Makefile.in.
  - Updated documents.

Version 1.7.7  November 3, 2016

  - Fixed bug in generalized Lanczos.

Version 1.7.6  November 1, 2016

  - Fixed bug in generalized CG.

Version 1.7.5  October 29, 2016

  - Added support for generalized Rayleigh quotient iteration,
    generalized CG, and generalized Arnoldi iteration.

Version 1.7.4  October 26, 2016

  - Fixed index bug in lis_esolver_ai.c.

Version 1.7.3  October 25, 2016

  - Fixed shift related bugs.
  - Added support for option -ige for generalized eigenproblems.
  - Disabled complex operations if complex.h is not available.
  - Updated documents.

Version 1.7.2  October 24, 2016

  - Added support for generalized Lanczos iteration.

Version 1.7.1  October 23, 2016

  - Inverted sign of shift for eigensolvers in accordance with custom.
  - Inverted sign of shift in lis_matrix_shift_diagonal(), lis_vector_shift(),
    and lis_array_shift(), respectively.
  - Added support for shift for generalized eigenproblems.
  - Updated man pages.

Version 1.7.0  October 22, 2016

  - Added official support for generalized eigenvalue problems.