@@ -143,6 +143,8 @@ LIS_INT lis_ecg(LIS_ESOLVER esolver)
   LIS_INT nsol,precon_type;
   char solvername[128],preconname[128];
 
+  LIS_DEBUG_FUNC_IN;
+
   comm = LIS_COMM_WORLD;
 
   A = esolver->A;
@@ -349,11 +351,13 @@ LIS_INT lis_ecg(LIS_ESOLVER esolver)
   if (resid<tol) 
     {
       esolver->retcode = LIS_SUCCESS;
+      LIS_DEBUG_FUNC_OUT;      
       return LIS_SUCCESS;
     }
   else
     {
       esolver->retcode = LIS_MAXITER;
+      LIS_DEBUG_FUNC_OUT;      
       return LIS_MAXITER;
     }
 }
@@ -450,6 +454,8 @@ LIS_INT lis_egcg(LIS_ESOLVER esolver)
   double time,itime,ptime,p_c_time,p_i_time;
   LIS_INT nsol,precon_type;
   char solvername[128],preconname[128];
+
+  LIS_DEBUG_FUNC_IN;
 
   comm = LIS_COMM_WORLD;
 
@@ -670,11 +676,13 @@ LIS_INT lis_egcg(LIS_ESOLVER esolver)
   if (resid<tol) 
     {
       esolver->retcode = LIS_SUCCESS;
+      LIS_DEBUG_FUNC_OUT;      
       return LIS_SUCCESS;
     }
   else
     {
       esolver->retcode = LIS_MAXITER;
+      LIS_DEBUG_FUNC_OUT;      
       return LIS_MAXITER;
     }
 }
@@ -781,6 +789,8 @@ LIS_INT lis_ecr(LIS_ESOLVER esolver)
   double time,itime,ptime,p_c_time,p_i_time;
   LIS_INT nsol,precon_type;
   char solvername[128],preconname[128];
+
+  LIS_DEBUG_FUNC_IN;
 
   comm = LIS_COMM_WORLD;
   
@@ -940,11 +950,13 @@ LIS_INT lis_ecr(LIS_ESOLVER esolver)
   if (resid<tol) 
     {
       esolver->retcode = LIS_SUCCESS;
+      LIS_DEBUG_FUNC_OUT;      
       return LIS_SUCCESS;
     }
   else
     {
       esolver->retcode = LIS_MAXITER;
+      LIS_DEBUG_FUNC_OUT;      
       return LIS_MAXITER;
     }
 }
@@ -1051,6 +1063,8 @@ LIS_INT lis_egcr(LIS_ESOLVER esolver)
   double time,itime,ptime,p_c_time,p_i_time;
   LIS_INT nsol,precon_type;
   char solvername[128],preconname[128];
+
+  LIS_DEBUG_FUNC_IN;
 
   comm = LIS_COMM_WORLD;
   
@@ -1221,11 +1235,13 @@ LIS_INT lis_egcr(LIS_ESOLVER esolver)
   if (resid<tol) 
     {
       esolver->retcode = LIS_SUCCESS;
+      LIS_DEBUG_FUNC_OUT;      
       return LIS_SUCCESS;
     }
   else
     {
       esolver->retcode = LIS_MAXITER;
+      LIS_DEBUG_FUNC_OUT;      
       return LIS_MAXITER;
     }
 }
