@@ -2,6 +2,7 @@ Version 1.7.15  December 6, 2016
 
   - Fixed print bugs.
   - Change specification of lis_print_rhistory().
+  - Fixed debug related bugs.
 
 Version 1.7.14  December 3, 2016
 
